Fix h1 alignment and add pseudo

--- a/css/styles.css
+++ b/css/styles.css
@@ -65,8 +65,6 @@ h1 {
 /* STARS */
 .stars-section {
     background-color: var(--color-background-light-pink);
-}
-#stars-section h3 {
     color: var(--color-various-purple);
 }
 .fa-star {
@@ -139,6 +137,7 @@ h1 {
     flex-direction: column;
     margin: 20px 20px;
     padding: 30px;
+    transition: all .2s ease-in-out;
 }
 #review img {
     border-radius: 50%;
@@ -160,8 +159,13 @@ h1 {
 /* ==========
     4. PSEUDO
 ========== */
-
-
+.stars-section:hover {
+    background-color: var(--color-various-purple);
+    color: var(--color-fonts-white);
+}
+#review:hover {
+    transform: scale(1.1);
+}
 
 
 
@@ -185,6 +189,9 @@ h1 {
     */
     #description {
         text-align: left;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
     h1 {
         font-size: 3rem;
@@ -224,7 +231,6 @@ h1 {
     */
     #review-section {
         display: flex;
-        flex-wrap: wrap;
         grid-column: 1/3;
         margin-left: 0px;
     }
